--- a/style.css
+++ b/style.css
@@ -62,7 +62,11 @@ header>div.container-flex {
 #logo {
     width: 155px;
 }
+.pesquisar {
+color: var(--branco);
+border-radius: 50px;
 
+}
 .links {
     /* background-color: rgb(234, 212, 255); */
     display: flex;
@@ -308,7 +312,7 @@ font-family: "Rosaline", Regular;
     margin-bottom: 25px;
 }
 
-/* Inputs */
+
 .card-contato input,
 .card-contato textarea {
     width: 100%;
@@ -344,24 +348,15 @@ font-family: "Rosaline", Regular;
 
 /* Fundo rosa arredondado */
 .footer-contatos {
-    background-color: #c78b92;
+    background-image: url(./img/Frame\ 4.svg);
+    background-size: cover;
+    
     padding: 80px 20px;
     text-align: center;
     position: relative;
 }
 
-.footer{
-    width: 100%;
-    height: 100px;
-    background: url('data:image/svg+xml;utf8,\
-<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0 0 1440 100">\
-<path fill="%23c78b92" d="M0,32 C240,96 480,0 720,32 C960,64 1200,0 1440,32 L1440,0 L0,0 Z"></path>\
-</svg>');
-    background-size: cover;
-    position: absolute;
-    top: -99px;
-    left: 0;
-}
+
 
 .footer-contatos h2 {
     font-family: "Playfair Display", serif;
@@ -369,7 +364,7 @@ font-family: "Rosaline", Regular;
     margin-bottom: 30px;
 }
 
-/* Ícones e texto */
+
 .info-container {
     display: flex;
     justify-content: center;
@@ -378,24 +373,31 @@ font-family: "Rosaline", Regular;
     margin-bottom: 30px;
 }
 
-.contato {
+
+.contato, .local {
     display: flex;
     align-items: center;
     gap: 8px;
     font-size: 15px;
+    margin: 0;
 }
 
-contato i {
-    font-size: 18px;
+
+.contato img,
+.local img {
+    width: 20px;
+    height: 20px;
 }
+
 
 .mapa-container {
-    maainerx-width: 600px;
+    max-width: 600px;
     margin: 0 auto;
     border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
+
 /* -------------------- Responsividade --------------- */
 
 #sombra {
